--- a/WGM Application/MainWindow.xaml
+++ b/WGM Application/MainWindow.xaml
@@ -27,7 +27,7 @@
                     <MenuFlyoutItem Text="Poll Location" Click="PollLocationEnabled" ToolTipService.ToolTip="Once started polling will be set on by default. To disable go into settings."/>
                     <MenuFlyoutItem Text="Input Location" Click="OpenLocationDialog"/>
                 </MenuFlyoutSubItem>
-                <MenuFlyoutItem Text="Settings" Click="openActions"></MenuFlyoutItem>
+                <MenuFlyoutItem Text="Settings" Click="OpenSettings"></MenuFlyoutItem>
             </MenuBarItem>
         </MenuBar>
         
